Fixed colors and added missing margins

--- a/app/design/frontend/Vass/PU/web/css/source/pagebuilder/_footer.less
+++ b/app/design/frontend/Vass/PU/web/css/source/pagebuilder/_footer.less
@@ -61,10 +61,19 @@
                 display: flex;
                 justify-content: flex-start;
                 align-items: center;
+                margin-bottom: 6px;
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
 
                 a {
                     display: flex;
                     align-items: center;
+                }
+
+                span {
+                    color: @primary-black;
                 }
             }
 
